# alsa_callbacks

./: .clang-tidy  CMakeLists.txt  README.md  checks.sh  setup.sh
inc/: callback.hh
src/: callback.cc
test/: test.cc
